fix: :bug: Fix ibc denom inside claim dialog
Fix scrollbar css style and ibc token denom inside claim dialog

--- a/src/css/_scrollbar.scss
+++ b/src/css/_scrollbar.scss
@@ -10,7 +10,7 @@ body,
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     border-width: 0;
-    background-color: $secondary;
+    background-color: $dark;
   }
 
   &::-webkit-scrollbar-thumb {
